<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.Item.ItemFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/dip_16"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables,UselessParent">

                <ImageView
                    android:id="@+id/back_button_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:src="@drawable/ic_back"
                    android:contentDescription="@string/icon_back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/barang"
                    android:layout_marginStart="@dimen/dip_16"
                    style="@style/TextRegularPrimary"
                    android:textSize="22sp" />
            </LinearLayout>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/list_item_product" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_empty_product_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/illustration_empty"
            android:contentDescription="@string/illustrasi_data_kosong" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            style="@style/TextRegularPrimary"
            android:layout_marginTop="@dimen/dip_8"
            android:text="@string/oops" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_gravity="center_horizontal"
            style="@style/TextRegularSecondary"
            android:text="@string/data_produk_kosong_silahkan_tambah_produk" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading_product_item"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_gravity="center"
        android:visibility="invisible" />

</FrameLayout>